# EVAL-ADAL6110-16-GUI

./: .gitignore  .gitmodules  Doxyfile  Tools And Libraries.docx  set-vcan0.sh
src/: AWLCuteDemo - Copy.xml  AWLCuteDemo-vs2010.sln  AWLCuteDemo.sln  CMakeLists.txt  CuteDemoConfigVersion.cmake.in  Install Libraries.docx  ToGuardian.bat  ToWagner.bat  UpgradeLog.htm  qt.conf
src/AP/apps_data/: AR0132_read_embedded.ini  AR0231AT-REV3.ini  AR0231AT-REV4.ini  AR0231AT-REV6.ini  AR0231AT-REV7-1.ini  AR0231AT-REV7.ini
src/AP/include/: apbase.h
src/AP/sensor_data/: AR0231AT-REV3.ldat  AR0231AT-REV3.xsdat  AR0231AT-REV4.ldat  AR0231AT-REV4.xsdat  AR0231AT-REV6.ldat  AR0231AT-REV6.xsdat  AR0231AT-REV7-1.ldat  AR0231AT-REV7-1.xsdat  AR0231AT-REV7.ldat  AR0231AT-REV7.xsdat  MT9P001-REV8.ldat
src/AWLBareDemo/: AWLBareDemo.cpp  AWLBareDemo.vcxproj  AWLBareDemo.vcxproj.filters  AWLSettings.cpp  AWLSettings.h  AWLSimpleDemoSettings.xml  AWLSimpleSettings.cpp  AWLSimpleSettings.h  ReadMe.txt  awlsimpledemo.cpp  awlsimpledemo.h  stdafx.cpp
src/AWLCoreClasses/: AWLCANMessageDef.h  CoordinateSystem.cpp  CoordinateSystem.h  DebugPrintf.cpp  DebugPrintf.h  DetectionStruct.cpp  DetectionStruct.h  LoopedWorker.cpp  LoopedWorker.h  Publisher.cpp  Publisher.h  ReceiverCANCapture.cpp  ReceiverCANCapture.h  ReceiverCapture.cpp  ReceiverCapture.h  ReceiverEasySyncCapture.cpp  ReceiverEasySyncCapture.h  ReceiverKvaserCapture.cpp  ReceiverKvaserCapture.h  ReceiverLibUSBCapture.cpp  ReceiverLibUSBCapture.h  ReceiverPolledCapture.cpp  ReceiverPolledCapture.h  ReceiverPosixTTYCapture.cpp  ReceiverPosixTTYCapture.h  ReceiverPosixUDPCapture.cpp  ReceiverPosixUDPCapture.h  ReceiverPostProcessor.cpp  ReceiverPostProcessor.h  ReceiverSimulatorCapture.cpp  ReceiverSimulatorCapture.h  ReceiverSocketCANCapture.cpp  ReceiverSocketCANCapture.h  ReceiverTCPCapture.cpp  ReceiverTCPCapture.h  Subscription.cpp  ThreadedWorker.cpp  ThreadedWorker.h  algo.h  awlcoord.cpp  (+1 more)
src/AWLQtDemo/: .gitignore  51-adi.rules  AP.h  APVideoCapture.cpp  APVideoCapture.h  APVideoViewer.cpp  APVideoViewer.h  AWLDemoSettings-AWL-Internal.xml  AWLDemoSettings-AWL-public.xml  AWLDemoSettings-Guardian-1 Sensor.xml  AWLDemoSettings-Wagner-1 Sensor.xml  AWLDemoSettings-Wagner-3 Sensors.xml  AWLDemoSettings-ultrascale.xml  AWLDemoSettings.xml  AWLDemoSettings.xml.360.view  AWLDemoSettings.xml.curent  AWLDemoSettings.xml.guardian  AWLDemoSettings.xml.linux  AWLDemoSettings.xml.pomme  AWLDemoSettings.xml.public  AWLDemoSettings.xml.ultrascale  AWLDemoSettings.xml.wagner  AWLDemoSettings.xml.wagner.3sensor  AWLDemoSettings.xml.wagner.3sensors  AWLQtDemo.rc  AWLQtDemo.rc - Raccourci.lnk  AWLQtDemo.vcxproj  AWLQtDemo.vcxproj.filters  AWLSettings.cpp  AWLSettings.h  BlockingReader.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.fedora  CMakeLists.txt.linux  CMakeLists.txt.raspbian  CMakeLists.txt.ubuntu  CMakeLists.txt.ultrascale  CMakeLists.txt.windows  (+93 more)
src/AWLQtDemo/AWLBareDemo/: AWLBareDemo.cpp  AWLBareDemo.vcxproj  AWLBareDemo.vcxproj.filters  AWLSettings.cpp  AWLSettings.h  AWLSimpleDemoSettings.xml  awlsimpledemo.cpp  awlsimpledemo.h
src/AWLQtDemo/AWLCoreClasses/: AWLCANMessageDef.h  BlockingReader.h  CoordinateSystem.cpp  CoordinateSystem.h  DebugPrintf.cpp  DebugPrintf.h  DetectionStruct.cpp  DetectionStruct.h  LoopedWorker.cpp  LoopedWorker.h  Publisher.cpp  Publisher.h  ReceiverCANCapture.cpp  ReceiverCANCapture.h  ReceiverCANMessageDef.h  ReceiverCapture.cpp  ReceiverCapture.h  ReceiverEasySyncCapture.cpp  ReceiverEasySyncCapture.h  ReceiverKvaserCapture.cpp  ReceiverLibUSBCapture.cpp  ReceiverLibUSBCapture.h  ReceiverPolledCapture.cpp  ReceiverPolledCapture.h  ReceiverPosixTTYCapture.cpp  ReceiverPosixUDPCapture.cpp  ReceiverPosixUDPCapture.h  ReceiverPostProcessor.cpp  ReceiverPostProcessor.h  ReceiverSimulatorCapture.cpp  ReceiverSimulatorCapture.h  ReceiverSocketCANCapture.h  ReceiverTCPCapture.cpp  SensorCoord.cpp  SensorCoord.h  SensorSettings.cpp  SensorSettings.h  Subscription.cpp  Subscription.h  ThreadedWorker.cpp  (+3 more)
src/AWLQtDemo/AWLQtScope/: awlqtscope.cpp  awlqtscope.h  awlscopeplot.cpp  curvedata.cpp  curvedata.h  knob.cpp  knob.h  samplingthread.cpp  samplingthread.h  wheelbox.cpp  wheelbox.h
src/AWLQtDemo/GeneratedFiles/: qrc_awlqtdemo.cpp  ui_FOV_2DScan.h  ui_awlqtdemo.h  ui_awlqtscope.h
src/AWLQtDemo/LinuxCute_autogen/: moc_predefs.h  mocs_compilation.cpp
src/AWLQtDemoSetup/: AWLQtDemoSetup.vdproj
src/AWLQtScope/: awlqtscope.cpp  awlqtscope.h  awlqtscope.qrc  awlqtscope.ui  awlscopeplot.cpp  awlscopeplot.h  curvedata.cpp  curvedata.h  knob.cpp  knob.h  main.cpp  signaldata.cpp  signaldata.h  ui_awlqtscope.h  wheelbox.cpp  wheelbox.h
src/Documentation/: Install Libraries.docx
src/Drivers/Demo_Driver/: winusb_adi.cat
src/Drivers/WinUSB_Signed_Package_Driver/: driver.inf
src/InstallableDLLs/: CopyDLLDependencies.BAT  PublisherPolicy.config
src/LiDARInterfaceLib/: LiDARInterfaceLib.vcxproj  LiDARInterfaceLib.vcxproj.filters
src/Licenses/: LICENSE.txt  PHANTOM_LICENSE.GPL3  PHANTOM_LICENSE.LGPL3
src/Licenses/Microsoft/: Microsoft Visual C++2015 Redistributable (x86) 14.23.27820 .txt
src/PhantomLidarDemoSetup/: AWLSetup.isl  PhantomLidarDemoSetup.isl  PhantomLidarDemoSetup.isproj
src/SensorCoreClasses/: CoordinateSystem.cpp  CoordinateSystem.h  DebugPrintf.cpp  DebugPrintf.h  DetectionStruct.cpp  DetectionStruct.h  LoopedWorker.cpp  LoopedWorker.h  Publisher.cpp  Publisher.h  ReceiverCANCapture.cpp  ReceiverCANCapture.h  ReceiverCANMessageDef.h  ReceiverCapture.cpp  ReceiverCapture.h  ReceiverLibUSB2Capture.cpp  ReceiverLibUSB2Capture.h  ReceiverLibUSBCapture.cpp  ReceiverLibUSBCapture.h  ReceiverPolledCapture.cpp  ReceiverPolledCapture.h  ReceiverPostProcessor.cpp  ReceiverPostProcessor.h  ReceiverSimulatorCapture.cpp  ReceiverSimulatorCapture.h  SensorCoord.cpp  SensorCoord.h  SensorCoreClasses.vcxproj  SensorCoreClasses.vcxproj.filters  SensorCoreClassesGlobal.h  SensorSettings.cpp  SensorSettings.h  Subscription.cpp  Subscription.h  ThreadedWorker.cpp  ThreadedWorker.h
(+784 files in other folders)
